Enhance visual distinction for Admin Console

--- a/admin/index.html
+++ b/admin/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="logo-text">
                     <h1>PasteBin Pro</h1>
-                    <span class="badge">Admin Console</span>
+                    <span class="badge">🔒 Secure Admin Console</span>
                 </div>
             </div>
             <div class="header-actions">
