Minimalist Refactor: Plain text auth, /adminperm path, public list on root

--- a/admin/login.html
+++ b/admin/login.html
@@ -289,7 +289,7 @@
 
                 if (response.ok) {
                     // Login successful - redirect to admin
-                    window.location.href = '/admin/index.html';
+                    window.location.href = '/adminperm/index.html';
                 } else {
                     showError(data.error || 'Invalid password');
                     passwordInput.value = '';
