--- a/public/view.html
+++ b/public/view.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PasteBin Pro - View Paste</title>
     <meta name="description" content="View and share code snippets with beautiful syntax highlighting">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -181,8 +181,8 @@
         </div>
     </div>
 
-    <script src="../shared/api.js"></script>
-    <script src="app.js"></script>
+    <script src="/shared/api.js"></script>
+    <script src="/public/app.js"></script>
 </body>
 
 </html>
