--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PasteBin Pro - Admin Console</title>
+    <title>DeadDrop - Escos Drops (Rule Controlled)</title>
     <meta name="description" content="Create and manage your pastes with advanced configuration options">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
