--- a/admin/index.html
+++ b/admin/index.html
@@ -122,11 +122,38 @@
                                 <option value="1M">1 Month</option>
                             </select>
                         </div>
+
+                        <div class="form-group">
+                            <label for="pasteFolder">Folder</label>
+                            <div style="display: flex; gap: 8px;">
+                                <select id="pasteFolder" class="select-field">
+                                    <option value="">No Folder</option>
+                                    <!-- Populated dynamically -->
+                                </select>
+                                <button id="manageFoldersBtn" class="btn btn-glass btn-icon" title="Manage Folders"
+                                    type="button">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2">
+                                        <path
+                                            d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z">
+                                        </path>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="pasteContent">Content</label>
-                        <textarea id="pasteContent" placeholder="Paste your code here..."
+                        <div
+                            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
+                            <label for="pasteContent">Content</label>
+                            <button id="uploadImageBtn" class="btn-small btn-glass" title="Upload Image">
+                                🖼️ Add Image
+                                <input type="file" id="imageInput" style="display: none;" accept="image/*">
+                            </button>
+                        </div>
+                        <textarea id="pasteContent"
+                            placeholder="Paste your code here... (Markdown supported for images)"
                             class="textarea-field"></textarea>
                     </div>
 
@@ -228,6 +255,32 @@
             </div>
             <div id="analyticsContent">
                 <!-- Dynamically populated -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Folder Management Modal -->
+    <div id="folderModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Manage Folders</h3>
+                <button id="closeFolderBtn" class="btn-icon">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none">
+                        <path d="M14 4L4 14M4 4L14 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+                    </svg>
+                </button>
+            </div>
+            <div class="folder-management-body">
+                <div class="form-group" style="margin-bottom: 24px;">
+                    <label>New Folder Name</label>
+                    <div style="display: flex; gap: 8px;">
+                        <input type="text" id="newFolderName" class="input-field" placeholder="e.g. My Projects">
+                        <button id="addFolderBtn" class="btn btn-primary">Add</button>
+                    </div>
+                </div>
+                <div id="folderList" class="folder-list">
+                    <!-- Dynamically populated -->
+                </div>
             </div>
         </div>
     </div>
