Restore Motion Blur cursor, remove scroll blur demo

--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
         <div id="loading-info">Click/Tap for water-like distortion ripples</div>
     </div>
 
-    <!-- Motion Blur Overlay -->
+    <!-- Motion Blur Cursor Container -->
     <div id="motion-blur-container">
-        <!-- Cursor trail elements will be injected here or body -->
+        <!-- Cursor trail elements injected by JS -->
     </div>
 
     <!-- Motion Blur Scripts -->
